<resources>
    <string name="app_name">NextDoor Farm</string>

    <!-- Shared preferences-->
    <string name="preference_file_key">APP_SETTINGS</string>
    <string name="user_id">user-id</string>
    <string name="user_type">user_type</string>
    <string name="token">token</string>

    <!-- Login activity-->
    <string name="activity_log_in_title">Digging the tunnels between customers and farmers</string>
    <string name="activity_log_in_hint_username">Enter email / username</string>
    <string name="activity_log_in_hint_password">Enter password</string>
    <string name="activity_log_in_button_login">Log in</string>
    <string name="activity_log_in_hint_do_not_have_account">First time here?</string>
    <string name="activity_log_in_button_sign_up">Create new account</string>

    <!-- Sign up activity-->
    <string name="activity_sign_up_title">Sign up</string>
    <string name="activity_sign_uo_hint_first_name">Enter first name</string>
    <string name="activity_sign_uo_hint_last_name">Enter last name</string>
    <string name="activity_sign_uo_hint_username">Enter username</string>
    <string name="activity_sign_uo_hint_email">Enter email</string>
    <string name="activity_sign_up_hint_password">Enter password</string>
    <string name="activity_sign_up_hint_password_confirm">Enter password one more time</string>

    <string name="activity_log_in_sign_up_button_customer">Customer</string>
    <string name="activity_log_in_sign_up_button_farmer">Farmer</string>

    <!--Menu-->
    <string name="menu_products">Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>

    <!--Customer Activity-->
    <!--Profile page-->
    <string name="fragment_customer_profile_title">Profile</string>
    <string name="fragment_customer_profile_edit_title">Edit</string>

    <!--Products page-->
    <string name="fragment_customer_products_title">Products</string>

    <!--Orders page-->
    <string name="fragment_customer_orders_title">Orders</string>
</resources>